--- a/HammerBot_Server/README
+++ b/HammerBot_Server/README
@@ -1,4 +1,7 @@
-This is your new Play 2.0 application
-=====================================
+# HammerBot Server #
 
-This file will be packaged with your application, when using `play dist`.
+A Play 2.0 HTTP server used for testing HammerBot
+
+Run using:
+
+        play run
